2005-04-27  Brian Kahne  <bkahne@freescale.com>

	* configure and Makefile.in files are now checked in so that the
	user does not have to run automake/autoconf to build from CVS.

        ====== plasma release 0.8.18 (v0_8_18) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.18 (v0_8_18) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.18 (v0_8_18) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.18 (v0_8_18) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.18 (v0_8_18) on Linux (cde-tx32-ldt189) ======

2005-04-20  Brian Kahne  <bkahne@freescale.com>

	* Added support for a "let" statement.  It has the form of:

	let (decl [, decl ...]) { body }

	where decl is a variable declaration with or without a type.  If
	no type is present, its type is inferenced using gcc's typeof operator.

        ====== plasma release 0.8.17 (v0_8_17) on Linux (cde-tx32-ldt189) ======

2005-03-16  Brian Kahne  <bkahne@ibmoto.com>

	* Added a Ptree::Reify function to handle booleans and added to
	tests/parsing to test this.

	* Modified the SourceLocation function to recursively find the
	first leaf- this is a better implementation than what I had
	before.

        ====== plasma release 0.8.16 (v0_8_16) on Linux (cde-tx32-ldt189) ======

2005-03-10  Brian Kahne  <bkahne@ibmoto.com>

	* Additional minor changes, such as better source location support
	for error messages:  Given a ptree, if it's not a leaf, we attempt
	to find a leaf item.

2005-03-09  Brian Kahne  <bkahne@ibmoto.com>

	* Enhanced the parser to accept several new things:

	Multi-line quotes are now supported using Python's doc-string
	format:  """ string """.

	Nested code blocks are allowed:

	foo = { ... };

	Bare user-statements are allowed in expressions:

	foo = func(int i) { ... };

	Support for nested functions was added, but is currently commented
	out in Parser.cc.
